<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, StampProtocolActivity!</string>
    <string name="app_name">StampProtocol</string>
    <string name="btActWitness">Act as Witness</string>
    <string name="btReqProof">Request Proof</string>
    <string name="defaulttext">Default text</string>
    <string name="btVldProof">Validate Proof</string>
    <string name="btDisable">Disable</string>

</resources>